language/move-lang/tests/move_check/parser/use_inner_scope_invalid.move
address 0x1 {
module M {
    fun t() {
        let x = 0;

        use 0x0::M::foo;
        foo(x)
    }
}
